<resources>
    <string name="app_name">Adventure Logger</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Adventure Logger</string>
    <string name="Whistler">Plot Whistler</string>
    <string name="Cypress">Plot Cypress</string>
    <string name="Return">Return</string>
    <string name="editText">Edit</string>
    <string name="title_activity_title_page">Adventure Logger</string>
    <string name="Welcome">Welcome to Adventure Logger!</string>
    <string name="Distance">Distance Travelled</string>
    <string name="Altitude">Altitude Changed</string>
    <string name="Time">Time Elapsed</string>
    <string name="Swipe">Swipe right to see past trips</string>
    <string name="SwipeL">Swipe left to Beam your stats</string>
    <string name="title_activity_nfc">Compare Stats</string>
    <string name="Prepare">Prepare File</string>
    <string name="Read">Compare File</string>
    <string name="listButton">View Trip</string>
    <string name="more_info">Trip Statistics</string>
    <string name="title_activity_trip_statistics">Trip Statistics</string>
    <string name="okay">Okay</string>
</resources>
