<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.manolito.adventurelogger.TripStatistics"
    tools:showIn="@layout/activity_trip_statistics">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Distance"
        android:id="@+id/distanceLabel"

        android:background="#124c1b"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"

        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/distance"
        android:background="#ffffff"

        android:textColor="#000000"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/distanceLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Time"
        android:id="@+id/timeLabel"

        android:background="#124c1b"
        android:textColor="#ffffff"

        android:layout_below="@+id/distance"

        android:gravity="center_vertical|center_horizontal"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/time"
        android:background="#ffffff"

        android:textColor="#000000"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/timeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Altitude"
        android:id="@+id/altitudeLabel"

        android:background="#124c1b"
        android:textColor="#ffffff"

        android:layout_below="@+id/time"

        android:gravity="center_vertical|center_horizontal"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/altitude"
        android:background="#ffffff"

        android:textColor="#000000"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/altitudeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
